Update reports on 20190820

--- a/Reports/20190820/progress_report_20190820.tex
+++ b/Reports/20190820/progress_report_20190820.tex
@@ -62,7 +62,7 @@
 \section{進捗詳細}					%% 固定
 \subsection{最終面接に向けた準備}
 8月21日に行われる最終面接の準備を行っていた．具体的には，想定質問の作成，キャリアセンターでの相談・模擬面接
-などである．学校推薦を使用しているが，通常の選考と変わることなく，全力で臨みたいと考えている．
+などである．学校推薦を使用しているが，通常の選考と変わることなく全力で臨みたい．
 
 \subsection{CartPole-v0のPyTorch実装}
 強化学習のHello world的タスクである\texttt{Open AI Gym}の\texttt{Atari CartPole-v0}を
@@ -78,8 +78,8 @@
   \label{fig1}
 \end{figure}
 図1では\texttt{Colaboratory}の\texttt{ipnb}ノートブック上に学習結果の動画を出力した画像である．
-\texttt{Colaboratory}は特殊環境(Google Compute Engine上のコンテナであるためGUI)であるため，
-動画埋め込み出力の実装に時間がかかってしまっていた．
+\texttt{Colaboratory}は特殊環境(Google Compute Engine上のコンテナであるためGUI処理に追加処理が必要)
+であるため，動画埋め込み出力の実装に時間がかかってしまっていた．
 
 
 \section{今後の予定}
